artifactory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artifactory-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2g
spec:
  ingressClassName: artifactory-nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: artifactory-oss
            port:
              number: 8082
